Fix server names not showing

--- a/code/menu/FindGame.razor.scss
+++ b/code/menu/FindGame.razor.scss
@@ -55,13 +55,11 @@
     }
 
     ServerRow {
-        height: 30px;
         background-color: transparent;
 
         .title, .players, .ping {
             color: white;
             font-family: Consolas;
-            font-size: 15px;
         }
     }
 
@@ -72,8 +70,6 @@
 }
 
 ServerRowPackage {
-    
-
     .org {
         display: none;
     }
